# rtest

./: BUILD.md  CMakeLists.txt  README.md
.cmake/: FindARToolKitPlus.cmake  FindFreeGLUT.cmake  FindGLM.cmake
app/: CMakeLists.txt  calibration.cpp  circledetection.cpp  delaunay.cpp  multiDetection.cpp  simpleDetection.cpp  videoOGLTracking.cpp
src/: CMakeLists.txt
src/tracker/: ARTagBasedTracker.cpp  ARTagUtil.cpp  CMakeLists.txt  Camera.cpp  ChessboardCameraTracker.cpp  ChessboardCameraTrackerKLT.cpp  MultiARTagBasedTracker.cpp  MyTrackerMultiMarkerImpl.cpp  OcvCamera.cpp  utility.cpp
src/tracker/tracker/: ARTagBasedTracker.hpp  ARTagUtil.hpp  Camera.hpp  ChessboardCameraTracker.hpp  ChessboardCameraTrackerKLT.hpp  ICameraTracker.hpp  MultiARTagBasedTracker.hpp  MyTrackerMultiMarkerImpl.hpp  OcvCamera.hpp  utility.hpp
tools/: angle2Vectors.m  are3pointsAligned.m  computeMatches.m  degenerateQuad.m  genARPattern  genARPattern.py  getQuad.m  getkite.m  homography2d.m  interactive.m  quad.m
